myteo/test/analyze/type_check/variable_declaration/toplevel_missing_annotation.myte
module test

val x = 1;

var y = ();

fun main() {}